alignment issues with mobile navbar

--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -449,7 +449,7 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar .navbar-collapse {
-  text-align: center;
+  text-align: left;
 }
 
 
